--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <li>External JavaScript .js file (separation of concern)</li>
         </ol>
         
-        <h3>Explore the world</h3>
+         <h1 class="heading-text" id="mainHeadingText">03. Where to embedd/include/write/put JavaScript in HTML?</h1>
       </div>
       <div
         class="panel"
